force-app/main/default/objects/HolidayAbsence__c/HolidayAbsence__c.object-meta.xml
<CustomObject>
    <description>Object related with a Calendar Id, indicates the unavailable dates of an user or resource</description>
    <label>Vacaciones / Bloqueos</label>
    <nameField>
        <displayFormat>HA-{000000}</displayFormat>
        <label>Absence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacaciones / Bloqueos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>