force-app/main/default/objects/HolidayAbsence__c/fields/CalendarId__c.field-meta.xml
<CustomField>
    <fullName>CalendarId__c</fullName>
    <description>Calendar Id of user or resource</description>
    <label>Calendar Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>