force-app/main/default/objects/HolidayAbsence__c/fields/CalendarSettingType__c.field-meta.xml
<CustomField>
    <fullName>CalendarSettingType__c</fullName>
    <description>Calendar Setting Type</description>
    <label>Calendar Setting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>