force-app/main/default/objects/HolidayAbsence__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End of unavailable date range of user or resource</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>