force-app/main/default/objects/HolidayAbsence__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Absence reason</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CalendarSettingType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacaciones</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Formación</fullName>
            </value>
            <value>
                <fullName>Avería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>