force-app/main/default/objects/HolidayAbsence__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start of unavailable date range of user or resource</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>